@@ -16,83 +16,29 @@
 
 package gr.uoa.di.madgik.federation.search.aggregator.service;
 
-import gr.uoa.di.madgik.federation.search.aggregator.model.Node;
-import gr.uoa.di.madgik.node.capabilities.model.Capability;
-import gr.uoa.di.madgik.node.capabilities.model.NodeCapabilities;
-import gr.uoa.di.madgik.node.endpoint.client.HttpNodeCapabilitiesClient;
-import gr.uoa.di.madgik.node.endpoint.client.NodeCapabilitiesClient;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import gr.uoa.di.madgik.node.registry.client.HttpNodeRegistryClient;
+import gr.uoa.di.madgik.node.registry.client.Node;
+import gr.uoa.di.madgik.node.registry.client.NodeRegistryClient;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestClient;
-import org.springframework.web.util.UriComponentsBuilder;
 
 import java.net.URI;
-import java.util.Collections;
 import java.util.List;
 
 @Service
 public class NodeResolver {
 
-    private static final Logger logger = LoggerFactory.getLogger(NodeResolver.class);
-
-    private String nodeRegistryUrl;
-    private String nodeRegistryKey;
-
-    private RestClient webClient;
+    private final NodeRegistryClient client;
 
     public NodeResolver(@Value("${node.registry.url}") String nodeRegistryUrl,
                         @Value("${node.registry.key}") String nodeRegistryKey) {
-        this.webClient = RestClient.builder()
-                .baseUrl(nodeRegistryUrl)
-                .build();
-        this.nodeRegistryKey = nodeRegistryKey;
+        this.client = new HttpNodeRegistryClient(URI.create(nodeRegistryUrl), nodeRegistryKey);
     }
 
-    @Cacheable(cacheNames = "nodes", unless = "#result == null || #result.isEmpty()")
+    @Cacheable("nodes")
     public List<Node> fetchNodes() {
-        List<Node> nodes = (List<Node>) webClient.get()
-                .header("x-api-key", nodeRegistryKey)
-                .retrieve()
-                .body(new ParameterizedTypeReference<List<Node>>() {});
-        if (nodes == null) {
-            return List.of();
-        }
-
-        return nodes.stream()
-                .map(this::populateCapabilities)
-                .toList();
-    }
-
-    private Node populateCapabilities(Node node) {
-        List<Capability> capabilities = fetchCapabilities(node.nodeEndpoint());
-        return new Node(
-                node.id(),
-                node.name(),
-                node.logo(),
-                node.pid(),
-                node.legalEntity(),
-                node.nodeEndpoint(),
-                capabilities
-        );
-    }
-
-    private List<Capability> fetchCapabilities(URI nodeEndpoint) {
-        try {
-            NodeCapabilitiesClient client = new HttpNodeCapabilitiesClient(nodeEndpoint);
-            NodeCapabilities response = client.get();
-
-            if (response == null || response.getCapabilities() == null) {
-                return List.of();
-            }
-
-            return response.getCapabilities();
-        } catch (Exception e) {
-            logger.warn("Failed to fetch capabilities from node endpoint {}", nodeEndpoint, e);
-            return Collections.emptyList();
-        }
+        List<Node> nodes = client.fetchNodes();
+        return nodes == null ? List.of() : List.copyOf(nodes);
     }
 }
